# ToDoot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/database/: DatabaseManager.h
include/handlers/: TodoHandlers.h
include/models/: Todo.h
src/database/: DatabaseManager.cpp
src/handlers/: TodoHandlers.cpp
static/: index.html
static/css/: style.css
static/js/: todosManager.js
